# qoderwork-account-switcher

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounts.rs  detect.rs  mod.rs  quota_cmd.rs  switch.rs  update.rs
src-tauri/src/core/: mod.rs  paths.rs  process.rs  quota.rs  session.rs  state.rs  status.rs
src/components/: AccountForm.tsx  AccountList.tsx  Header.tsx  SettingsModal.tsx  SwitchProgress.tsx
src/hooks/: useAccounts.ts  useUpdate.ts
