[package]
name = "qoderwork-account-switcher"
version = "1.0.1"
edition = "2021"
description = "QoderWork CN Account Switcher"
authors = ["QoderWork"]

[lib]
name = "qoderwork_account_switcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
sysinfo = "0.31"
walkdir = "2"
regex = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["time", "rt", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", features = ["json"] }
aes-gcm = "0.10"
base64 = "0.22"
rsa = "0.9"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
uuid = { version = "1", features = ["v4"] }
cipher = "0.4"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows-dpapi = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
